app/styles/scss/components/_imageview.scss
.image-view{
	padding-top: 0.625rem;
	font-family: $font-stack;

	.back-button{
		padding: 0.125rem 0.3125rem 0rem 0rem;
		border: 0rem;
		display: block;
		cursor: pointer;
		float:right;
		width:2%;
		opacity: 0.5;
		filter: alpha(opacity=50); /* For IE8 and earlier */

		&:hover{
			opacity: 1;
			filter: alpha(opacity=100);  /* For IE8 and earlier */
		}

		@include breakpoint(md){
			display:none;
		}
	}
	
	.img-block{
		margin:auto;
		-webkit-flex: 1; /* Safari 6.1+ */
		-ms-flex: 1; /* IE 10 */ 
		flex: 1;
		display: flex;
		align-items: center;
		justify-content: center;

		@include breakpoint(md){
			display:block;
		}

		img{
			width: 92%;
			display: block;
			overflow: hidden;
			margin:auto;

			@include breakpoint(md){
				width:100%;
			}
		}

		.arrow{
            width:4%;
            cursor: pointer;
			opacity: 0.5;
			filter: alpha(opacity=50); /* For IE8 and earlier */

			&:hover{
				opacity: 1.0;
				filter: alpha(opacity=100); /* For IE8 and earlier */
			}

			@include breakpoint(md){
				display:none;
			}
		}

		.btn-block{
			display:none;

			@include breakpoint(md){
				display: block;
				margin: auto; 
				margin-top: 5px;
				text-align: center;

				.mobile-btn{
					display:inline-block;
					margin:auto;
					width: 1.2rem;
					padding: 0 2rem 0 2rem;
					cursor: pointer;
					opacity: 0.5;
					filter: alpha(opacity=50); /* For IE8 and earlier */
				
					&:hover{
						opacity: 1.0;
						filter: alpha(opacity=100);  /* For IE8 and earlier */
					}
				}
			}
		}
	}
}

